force-app/main/default/objects/ServiceOption__c/ServiceOption__c.object-meta.xml
<CustomObject>
    <label>Service Option</label>
    <nameField>
        <displayFormat>SVO-{0000}</displayFormat>
        <label>Service Option ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>