force-app/main/default/objects/ServiceOption__c/fields/ComboProduct__c.field-meta.xml
<CustomField>
    <fullName>ComboProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ComboProduct__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ComboProduct__c</referenceTo>
    <relationshipLabel>Service Option</relationshipLabel>
    <relationshipName>Service_Option</relationshipName>
    <type>Lookup</type>
</CustomField>