force-app/main/default/objects/ServiceOption__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <formula>TEXT(Service__r.ServiceType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>