force-app/main/default/objects/ServiceOption__c/fields/TransportationWay__c.field-meta.xml
<CustomField>
    <fullName>TransportationWay__c</fullName>
    <label>Transportation Way</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transportation_Way</valueSetName>
    </valueSet>
</CustomField>